--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@assistant-ui/react": "^0.8.15",
     "@assistant-ui/react-ai-sdk": "^0.8.0",
     "@assistant-ui/react-markdown": "^0.8.0",
+    "@mastra/core": "^0.7.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "ai": "^4.3.2",
