--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ai": "^4.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "composio-core": "^0.5.31",
     "csv-parse": "^5.6.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
